[gd_scene load_steps=4 format=3 uid="uid://co45bdw7qhu7i"]

[ext_resource type="Script" path="res://waypoints/waypoint.gd" id="1"]

[sub_resource type="SphereShape3D" id="1"]

[sub_resource type="PrismMesh" id="PrismMesh_sg3xt"]

[node name="Waypoint" type="Node3D" groups=["waypoint"]]
script = ExtResource("1")

[node name="Area" type="Area3D" parent="."]

[node name="CollisionShape" type="CollisionShape3D" parent="Area"]
shape = SubResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area"]
visible = false
mesh = SubResource("PrismMesh_sg3xt")

[connection signal="mouse_entered" from="Area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_area_mouse_exited"]
